@@ -151,4 +151,6 @@ Oct 11, 1999
   - fixed problem with resizing parent module
 Oct 12, 1999
   - bugfix in balloon.tcl
-  - some fix on comment parsing/generating (eliminated space from "// ---" comments)
+  - fixes on comment parsing/generating:
+      eliminated space from "// ---" comments
+      eliminated annoying generation of extra blank lines (except after "import")
